[gd_scene load_steps=10 format=2]

[ext_resource path="res://prueba1.gd" type="Script" id=1]
[ext_resource path="res://fondotileset.jpeg" type="Texture" id=2]
[ext_resource path="res://tilesetconverrido.tres" type="TileSet" id=3]
[ext_resource path="res://spot.png" type="Texture" id=4]
[ext_resource path="res://Nodos/Mapa.tscn" type="PackedScene" id=5]
[ext_resource path="res://Playersombra/player.tscn" type="PackedScene" id=6]
[ext_resource path="res://sounds/krakosha-1.wav" type="AudioStream" id=7]
[ext_resource path="res://DS-DIGIB.TTF" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=1]
size = 35
font_data = ExtResource( 8 )

[node name="Node2D" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.10803
margin_bottom = 1.10803
script = ExtResource( 1 )

[node name="Sprite2" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 258.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 1

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 300, 100 )
scale = Vector2( 0.55, 0.55 )
tile_set = ExtResource( 3 )
format = 1
tile_data = PoolIntArray( -65539, 0, 0, -65538, 0, 0, -65537, 1, 0, -131072, 1, 0, -131071, 1, 0, -131070, 1, 0, -131069, 1, 0, -131068, 1, 0, -131067, 1, 0, -131066, 1, 0, -131065, 1, 0, -131064, 1, 0, -131063, 1, 0, -131062, 1, 0, -131061, 1, 0, -131060, 1, 0, -131059, 1, 0, -131058, 1, 0, -131057, 1, 0, -131056, 1, 0, -131055, 1, 0, -131054, 1, 0, -131053, 1, 0, -131052, 1, 0, -131051, 1, 0, -131050, 1, 0, -131049, 1, 0, -131048, 1, 0, -131047, 1, 0, -131046, 1, 0, -131045, 536870915, 0, -3, 3, 0, -1, 0, 0, -65534, 536870916, 0, -65530, 536870918, 0, -65524, 3, 0, -65514, 3, 0, -65509, 536870915, 0, 65533, 3, 0, 2, 2, 0, 4, 3, 0, 9, 536870915, 0, 12, 3, 0, 14, 1, 0, 15, 536870913, 0, 16, 1, 0, 17, 1, 0, 18, 1, 0, 19, 1, 0, 21, 1, 0, 22, 2, 0, 24, 536870913, 0, 25, 1, 0, 27, 536870915, 0, 131069, 3, 0, 65540, 536870918, 0, 65542, 8, 0, 65543, 536870916, 0, 65545, 536870914, 0, 65546, 1, 0, 65547, 5, 0, 65548, 2, 0, 65563, 536870915, 0, 196605, 3, 0, 196606, 536870913, 0, 196607, 536870913, 0, 131072, 1, 0, 131073, 536870913, 0, 131074, 1, 0, 131079, 3, 0, 131086, 3, 0, 131088, 1, 0, 131089, 1, 0, 131090, 536870913, 0, 131091, 1, 0, 131093, 1, 0, 131096, 3, 0, 131098, 5, 0, 131099, 536870915, 0, 262141, 3, 0, 196612, 3, 0, 196614, 0, 0, 196615, 2, 0, 196616, 536870913, 0, 196617, 536870913, 0, 196618, 1, 0, 196619, 1, 0, 196621, 536870913, 0, 196622, 2, 0, 196632, 3, 0, 196635, 536870915, 0, 327677, 3, 0, 327679, 3, 0, 262146, 3, 0, 262148, 3, 0, 262150, 536870914, 0, 262151, 5, 0, 262152, 536870913, 0, 262160, 0, 0, 262161, 536870913, 0, 262162, 1, 0, 262163, 536870912, 0, 262165, 536870915, 0, 262168, 3, 0, 262171, 536870915, 0, 393213, 3, 0, 393215, 8, 0, 327680, 5, 0, 327681, 1, 0, 327682, 2, 0, 327684, 536870918, 0, 327694, 3, 0, 327696, 3, 0, 327699, 536870915, 0, 327701, 536870915, 0, 327704, 536870918, 0, 327707, 536870915, 0, 458749, 3, 0, 393222, 0, 0, 393230, 536870918, 0, 393232, 3, 0, 393235, 536870914, 0, 393236, 536870913, 0, 393237, 2, 0, 393243, 536870915, 0, 524285, 3, 0, 458752, 3, 0, 458754, 4, 0, 458755, 536870913, 0, 458756, 536870912, 0, 458758, 536870915, 0, 458768, 5, 0, 458775, 0, 0, 458776, 1, 0, 458777, 536870913, 0, 458779, 536870915, 0, 589821, 3, 0, 589823, 0, 0, 524288, 2, 0, 524292, 3, 0, 524294, 536870914, 0, 524295, 536870913, 0, 524296, 536870912, 0, 524302, 536870915, 0, 524306, 0, 0, 524307, 1, 0, 524308, 5, 0, 524309, 1, 0, 524310, 536870913, 0, 524311, 2, 0, 524315, 536870915, 0, 655357, 3, 0, 655359, 3, 0, 589827, 536870913, 0, 589828, 2, 0, 589832, 536870914, 0, 589833, 536870913, 0, 589835, 536870913, 0, 589836, 536870913, 0, 589837, 536870913, 0, 589838, 536870912, 0, 589841, 1, 0, 589842, 2, 0, 589849, 0, 0, 589850, 1, 0, 589851, 536870915, 0, 720893, 3, 0, 720895, 536870914, 0, 655360, 1, 0, 655361, 536870912, 0, 655374, 536870915, 0, 655383, 0, 0, 655384, 536870913, 0, 655385, 2, 0, 655387, 536870915, 0, 786429, 3, 0, 720897, 536870918, 0, 720899, 1, 0, 720900, 1, 0, 720901, 3, 0, 720902, 1, 0, 720904, 1, 0, 720905, 1, 0, 720906, 1, 0, 720907, 536870912, 0, 720909, 1, 0, 720910, 1, 0, 720911, 1, 0, 720912, 1, 0, 720914, 1, 0, 720915, 1, 0, 720916, 1, 0, 720918, 1, 0, 720919, 1, 0, 720923, 536870915, 0, 851965, 3, 0, 851966, 1, 0, 851967, 536870912, 0, 786437, 3, 0, 786443, 3, 0, 786457, 3, 0, 786459, 536870915, 0, 917501, 3, 0, 917503, 536870915, 0, 851970, 3, 0, 851973, 536870918, 0, 851975, 1, 0, 851976, 1, 0, 851977, 1, 0, 851978, 1, 0, 851979, 2, 0, 851981, 0, 0, 851982, 1, 0, 851983, 1, 0, 851984, 1, 0, 851985, 1, 0, 851986, 1, 0, 851988, 3, 0, 851990, 1, 0, 851991, 1, 0, 851992, 536870912, 0, 851993, 3, 0, 851995, 536870915, 0, 983037, 3, 0, 983039, 536870914, 0, 917504, 536870912, 0, 917506, 3, 0, 917517, 536870915, 0, 917524, 3, 0, 917528, 3, 0, 917529, 3, 0, 917531, 536870915, 0, 1048573, 3, 0, 983040, 536870918, 0, 983042, 8, 0, 983043, 5, 0, 983044, 1, 0, 983046, 1, 0, 983047, 536870913, 0, 983048, 1, 0, 983049, 536870913, 0, 983050, 1, 0, 983052, 1, 0, 983053, 2, 0, 983055, 1, 0, 983056, 1, 0, 983057, 536870913, 0, 983058, 1, 0, 983059, 5, 0, 983060, 2, 0, 983062, 3, 0, 983064, 8, 0, 983065, 2, 0, 983067, 536870915, 0, 1114109, 3, 0, 1048598, 3, 0, 1048603, 536870915, 0, 1179645, 536870913, 0, 1179646, 536870913, 0, 1179647, 536870913, 0, 1114112, 536870913, 0, 1114113, 536870913, 0, 1114114, 536870913, 0, 1114115, 536870913, 0, 1114116, 536870913, 0, 1114117, 536870913, 0, 1114118, 536870913, 0, 1114119, 536870913, 0, 1114120, 536870913, 0, 1114121, 536870913, 0, 1114122, 536870913, 0, 1114123, 536870913, 0, 1114124, 536870913, 0, 1114125, 536870913, 0, 1114126, 536870913, 0, 1114127, 536870913, 0, 1114128, 536870913, 0, 1114129, 536870913, 0, 1114130, 536870913, 0, 1114131, 536870913, 0, 1114132, 536870913, 0, 1114133, 536870913, 0, 1114134, 536870913, 0, 1114135, 536870913, 0, 1114136, 536870913, 0, 1114137, 536870913, 0, 1114138, 536870913, 0, 1114139, 2, 0 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 318.511, 296.105 )
z_index = 2
z_as_relative = false
texture = ExtResource( 4 )
color = Color( 0.968627, 0.384314, 0.384314, 1 )

[node name="Light2D2" type="Light2D" parent="."]
position = Vector2( 424.137, 648.429 )
z_index = 2
z_as_relative = false
texture = ExtResource( 4 )
color = Color( 0.968627, 0.384314, 0.384314, 1 )

[node name="Light2D3" type="Light2D" parent="."]
position = Vector2( 567.332, 259.05 )
z_index = 2
z_as_relative = false
texture = ExtResource( 4 )
color = Color( 0.968627, 0.384314, 0.384314, 1 )

[node name="Light2D4" type="Light2D" parent="."]
position = Vector2( 1233.3, 189.285 )
z_index = 2
z_as_relative = false
texture = ExtResource( 4 )
color = Color( 0.968627, 0.384314, 0.384314, 1 )

[node name="Light2D5" type="Light2D" parent="."]
position = Vector2( 985.754, 649.832 )
z_index = 2
z_as_relative = false
texture = ExtResource( 4 )
color = Color( 0.968627, 0.384314, 0.384314, 1 )

[node name="Light2D6" type="Light2D" parent="."]
position = Vector2( 1022.71, 402.216 )
z_index = 2
z_as_relative = false
texture = ExtResource( 4 )
color = Color( 0.968627, 0.384314, 0.384314, 1 )

[node name="Light2D7" type="Light2D" parent="."]
position = Vector2( 882.392, 366.913 )
z_index = 2
z_as_relative = false
texture = ExtResource( 4 )
color = Color( 0.968627, 0.384314, 0.384314, 1 )

[node name="Light2D8" type="Light2D" parent="."]
position = Vector2( 704.699, 160.783 )
z_index = 2
z_as_relative = false
texture = ExtResource( 4 )
color = Color( 0.968627, 0.384314, 0.384314, 1 )

[node name="Mapa" parent="." instance=ExtResource( 5 )]
position = Vector2( -159.073, -96.378 )

[node name="Node" parent="." instance=ExtResource( 6 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
autoplay = true

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Label" type="Label" parent="."]
margin_left = 688.089
margin_top = 296.953
margin_right = 728.089
margin_bottom = 313.953
custom_fonts/font = SubResource( 1 )
text = "30"
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
